# claude-hackathon

./: .gitignore  ARCHITECTURE.md  DEMO_SCENARIO.md  FEATURES.md  README.md
backend/: main.py  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py
backend/app/claim/: __init__.py  router.py  service.py
backend/app/enrich/: __init__.py  claude.py  prompts.py  router.py  vision.py
backend/app/face/: __init__.py  router.py  service.py
backend/app/geo/: __init__.py  corridor.py  etl.py  route.py  router.py  service.py
backend/app/match/: __init__.py  blocking.py  engine.py  eval.py  features.py  fusion.py  router.py
backend/app/notify/: __init__.py  provider.py  router.py  service.py  templates.py
backend/app/registry/: __init__.py  router.py  seed.py  store.py
backend/app/search/: __init__.py  router.py  service.py
backend/app/triage/: __init__.py  router.py  service.py
backend/tests/: __init__.py  test_claim.py  test_corridor.py  test_family_search.py  test_geo.py  test_lifecycle.py  test_match.py  test_notify.py  test_notify_provider.py  test_route.py  test_triage.py  test_triage_api.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: manifest.webmanifest  offline.html  sw.js
frontend/public/geo/: cameras.json  chokepoints.json  landmarks.json  police.json  zones.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  sw.ts
frontend/src/components/: Nav.tsx
frontend/src/data/: location_coords.json  (+1 more)
shared/: location_coords.json  match_weights.json  wizard_vocab.json
(+45 files in other folders)
